SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    20 May 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150520
Tag Summary: New preconditioner for barotropic solver doesn't work on default
             gx3v7 layout for yellowstone; while investigating this issue,
             we'll go back to the old solver / preconditioner for the 3 deg
             resolution. Also removed some debugging lines of code left in
             barotropic.F90 by mistake.

Files Modified:
M       bld/namelist_files/namelist_defaults_pop.xml
M       source/barotropic.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    15 May 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150515
Tag Summary: New namelist defaults to use updated barotropic solver

Files Modified:
M       bld/namelist_files/namelist_defaults_pop.xml
===============================================================================
Tag Creator: mlevy
Developers:  huyong
Tag Date:    6 May 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150506
Tag Summary: Bugfix for exact restarts with CSI solver

Files Modified:
M       source/POP_SolversMod.F90
M       source/barotropic.F90
M       source/initial.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    30 Apr 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150430
Tag Summary: extend support for r8 0d IO to handle time dimension, add support
             for r4 0d IO (with and without time dimension), add tavg support
             for r4 and r8 0d variables, and add tavg output for existing 0d
             running_mean test variable

Files Modified:
M       source/io_netcdf.F90
M       source/io_types.F90
M       source/running_mean_mod.F90
M       source/tavg.F90