@@ -3,6 +3,16 @@ SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
 Developers:  mlevy
+Tag Date:    30 June 2015
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150630
+Tag Summary: save attribute in module variable after global save was casusing
+             compilation error in nag; also removed some un-used variables.
+
+Files Modified:
+M       source/POP_SolversMod.F90
+===============================================================================
+Tag Creator: mlevy
+Developers:  mlevy
 Tag Date:    20 May 2015
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150520
 Tag Summary: New preconditioner for barotropic solver doesn't work on default
